Adaptive general page and fix header

--- a/home.html
+++ b/home.html
@@ -6,7 +6,7 @@
 	<meta charset="UTF-8">
 	<meta name="format-detection" content="telephone=no">
 	<!-- <style>body{opacity: 0;}</style> -->
-	<link rel="stylesheet" href="css/style.min.css?_v=20220810140246">
+	<link rel="stylesheet" href="css/style.min.css?_v=20220810212401">
 	<link rel="shortcut icon" href="favicon.ico">
 	<!-- <meta name="robots" content="noindex, nofollow"> -->
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -114,7 +114,7 @@
 						</div>
 					</div>
 				</div>
-			</section>'
+			</section>
 
 			<!-- News slider -->
 			<section class="news">
@@ -123,69 +123,75 @@
 					<div class="news__wrapper swiper-wrapper">
 						<!-- Slide -->
 						<div class="news__slide swiper-slide">
-							<div class="news__img">
-								<picture><source srcset="img/news/24february.webp" type="image/webp"><img src="img/news/24february.jpg" alt="24 February russian federation start war vs Ukraine"></picture>
-							</div>
-							<div class="news__text">
-								<p class="news__date">
-									17.07.2022
-								</p>
-								<h2 class="title news__title">
-									24-го лютого 2022 року російська армія здійснила напад <br>
-									на Україну
-								</h2>
-								<p class="news__description">
-									Вся Україна об’єдналась заради миру та навколо спільної справи - допомоги
-									потребуючим, нашим захисникам, захисту рідного міста та держави.
-								</p>
-								<p class="news__chronology">
-									Хронологія подій з 1-го дня
-								</p>
-							</div>
+							<a href="#">
+								<div class="news__img">
+									<picture><source srcset="img/news/24february.webp" type="image/webp"><img src="img/news/24february.jpg" alt="24 February russian federation start war vs Ukraine"></picture>
+								</div>
+								<div class="news__text">
+									<p class="news__date">
+										17.07.2022
+									</p>
+									<h2 class="title news__title">
+										24-го лютого 2022 року російська армія здійснила напад <br>
+										на Україну
+									</h2>
+									<p class="news__description">
+										Вся Україна об’єдналась заради миру та навколо спільної справи - допомоги
+										потребуючим, нашим захисникам, захисту рідного міста та держави.
+									</p>
+									<p class="news__chronology">
+										Хронологія подій з 1-го дня
+									</p>
+								</div>
+							</a>
 						</div>
 						<!-- Slide -->
 						<div class="news__slide swiper-slide">
-							<div class="news__img">
-								<picture><source srcset="img/news/24february.webp" type="image/webp"><img src="img/news/24february.jpg" alt="24 February russian federation start war vs Ukraine"></picture>
-							</div>
-							<div class="news__text">
-								<p class="news__date">
-									17.07.2022
-								</p>
-								<h2 class="title news__title">
-									24-го лютого 2022 року російська армія здійснила напад <br>
-									на Україну
-								</h2>
-								<p class="news__description">
-									Вся Україна об’єдналась заради миру та навколо спільної справи - допомоги
-									потребуючим, нашим захисникам, захисту рідного міста та держави.
-								</p>
-								<p class="news__chronology">
-									Хронологія подій з 1-го дня
-								</p>
-							</div>
+							<a href="#">
+								<div class="news__img">
+									<picture><source srcset="img/news/24february.webp" type="image/webp"><img src="img/news/24february.jpg" alt="24 February russian federation start war vs Ukraine"></picture>
+								</div>
+								<div class="news__text">
+									<p class="news__date">
+										17.07.2022
+									</p>
+									<h2 class="title news__title">
+										24-го лютого 2022 року російська армія здійснила напад <br>
+										на Україну
+									</h2>
+									<p class="news__description">
+										Вся Україна об’єдналась заради миру та навколо спільної справи - допомоги
+										потребуючим, нашим захисникам, захисту рідного міста та держави.
+									</p>
+									<p class="news__chronology">
+										Хронологія подій з 1-го дня
+									</p>
+								</div>
+							</a>
 						</div>
 						<!-- Slide -->
 						<div class="news__slide swiper-slide">
-							<div class="news__img">
-								<picture><source srcset="img/news/24february.webp" type="image/webp"><img src="img/news/24february.jpg" alt="24 February russian federation start war vs Ukraine"></picture>
-							</div>
-							<div class="news__text">
-								<p class="news__date">
-									17.07.2022
-								</p>
-								<h2 class="title news__title">
-									24-го лютого 2022 року російська армія здійснила напад <br>
-									на Україну
-								</h2>
-								<p class="news__description">
-									Вся Україна об’єдналась заради миру та навколо спільної справи - допомоги
-									потребуючим, нашим захисникам, захисту рідного міста та держави.
-								</p>
-								<p class="news__chronology">
-									Хронологія подій з 1-го дня
-								</p>
-							</div>
+							<a href="#">
+								<div class="news__img">
+									<picture><source srcset="img/news/24february.webp" type="image/webp"><img src="img/news/24february.jpg" alt="24 February russian federation start war vs Ukraine"></picture>
+								</div>
+								<div class="news__text">
+									<p class="news__date">
+										17.07.2022
+									</p>
+									<h2 class="title news__title">
+										24-го лютого 2022 року російська армія здійснила напад <br>
+										на Україну
+									</h2>
+									<p class="news__description">
+										Вся Україна об’єдналась заради миру та навколо спільної справи - допомоги
+										потребуючим, нашим захисникам, захисту рідного міста та держави.
+									</p>
+									<p class="news__chronology">
+										Хронологія подій з 1-го дня
+									</p>
+								</div>
+							</a>
 						</div>
 					</div>
 					<!-- Navigation(Arrows) -->
@@ -221,12 +227,16 @@
 									Підтримка дітей та сімей загиблих військових.
 								</li>
 								<li class="about-short__item">
-									Фінансування інноваційних військових розробок у галузі робототехніки та авіабудування
+									Фінансування інноваційних військових розробок у галузі робототехніки та
+									авіабудування
 								</li>
 							</ul>
 							<a href="#" class="button button_stroke"><span>Докладніше</span></a>
 						</div>
 						<div class="about-short__img">
+							<h1 class="caption about-short__caption">
+								Про фонд
+							</h1>
 							<img src="img/about/About foundation.jpg" alt="'ANTITILA foundation team'">
 						</div>
 					</div>
@@ -246,7 +256,7 @@
 									млн грн
 								</h3>
 								<p class="description">
-									зібрано на потреби армії <br>
+									зібрано на потреби армії
 									з 2014 року
 								</p>
 							</div>
@@ -390,7 +400,7 @@
 		</div>
 	</div>
 </div> -->
-	<script src="js/app.min.js?_v=20220810140246"></script>
+	<script src="js/app.min.js?_v=20220810212401"></script>
 </body>
 
 </html>
