Create and adaptive 3 pages for directions of help

--- a/index.html
+++ b/index.html
@@ -15,7 +15,11 @@
 		</div>
 		<h2>Готовые страницы:</h2>
 		<ol class="rootpage__list">
-			<li><a target="_blank" href="home.html">Главная</a></li>
+			<li><a target="_blank" href="home.html">Головна</a></li>
+			<li><a target="_blank" href="militaryHelp.html">Допомога ЗСУ</a></li>
+			<li><a target="_blank" href="childrenHelp.html">Допомога дітям загиблих воїнів</a></li>
+			<li><a target="_blank" href="airHelp.html">Допомога в розробці дронів</a></li>
+
 		</ol>
 		<h2>Попапы:</h2>
 		<ol class="rootpage__list">
