--- a/home.html
+++ b/home.html
@@ -6,7 +6,7 @@
 	<meta charset="UTF-8">
 	<meta name="format-detection" content="telephone=no">
 	<!-- <style>body{opacity: 0;}</style> -->
-	<link rel="stylesheet" href="css/style.min.css?_v=20220810212401">
+	<link rel="stylesheet" href="css/style.min.css?_v=20220810234715">
 	<link rel="shortcut icon" href="favicon.ico">
 	<!-- <meta name="robots" content="noindex, nofollow"> -->
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -23,11 +23,18 @@
 					</div>
 					<nav class="menu__body">
 						<ul class="menu__list">
-							<li class="menu__item"><a href="#" class="menu__link">Про фонд</a></li>
-							<li class="menu__item"><a href="#" class="menu__link">Новини</a></li>
-							<li class="menu__item"><a href="#" class="menu__link">Звіти</a></li>
-							<li class="menu__item"><a href="tel:+380730000000" class="menu__link menu__link_phone">+38 (073)
-									000-00-00</a></li>
+							<li class="menu__item">
+								<a href="#" class="menu__link">Про фонд</a>
+							</li>
+							<li class="menu__item">
+								<a href="#" class="menu__link">Новини</a>
+							</li>
+							<li class="menu__item">
+								<a href="#" class="menu__link">Звіти</a>
+							</li>
+							<li class="menu__item">
+								<a href="tel:+380730000000" class="menu__link menu__link_phone">+38 (073) 000-00-00</a>
+							</li>
 						</ul>
 						<div class="menu__mobile">
 							<div class="menu__languages menu__languages_hidden">
@@ -38,9 +45,15 @@
 									<path d="M12 2.25V21.75M21.75 12H2.25" stroke="#2F2F2F" stroke-width="1.5" stroke-miterlimit="10" />
 								</svg>
 								<select name="form[]" class="form">
-									<option value="1" selected>ua</option>
-									<option value="2">ua</option>
-									<option value="3">en</option>
+									<option value="1" selected>
+										ua
+									</option>
+									<option value="2">
+										ua
+									</option>
+									<option value="3">
+										en
+									</option>
 								</select>
 							</div>
 							<a href="#" class="button menu__donate button_gradient menu__donate_hidden"><span>Швидкий донат</span></a>
@@ -57,9 +70,15 @@
 							<path d="M12 2.25V21.75M21.75 12H2.25" stroke="#2F2F2F" stroke-width="1.5" stroke-miterlimit="10" />
 						</svg>
 						<select name="form[]" class="form">
-							<option value="1" selected>ua</option>
-							<option value="2">ua</option>
-							<option value="3">en</option>
+							<option value="1" selected>
+								ua
+							</option>
+							<option value="2">
+								ua
+							</option>
+							<option value="3">
+								en
+							</option>
 						</select>
 					</div>
 					<a href="#" class="button menu__donate button_gradient"><span>Швидкий донат</span></a>
@@ -80,8 +99,10 @@
 								<div class="directions__inner">
 									<picture><source srcset="img/directions/military.webp" type="image/webp"><img src="img/directions/military.jpg" alt="Military help"></picture>
 									<div class="directions__text">
-										<h2 class="title directions__title">Допомога <br>
-											Збройним Силам України </h2>
+										<h2 class="title directions__title">
+											Допомога <br>
+											Збройним Силам України
+										</h2>
 									</div>
 								</div>
 							</a>
@@ -91,7 +112,9 @@
 								<div class="directions__inner">
 									<picture><source srcset="img/directions/children.webp" type="image/webp"><img src="img/directions/children.jpg" alt="Children help"></picture>
 									<div class="directions__text">
-										<h2 class="title directions__title">Допомога дітям</h2>
+										<h2 class="title directions__title">
+											Допомога дітям
+										</h2>
 										<p class="directions__description">
 											загиблих військових 130 батальйону ТрО
 										</p>
@@ -104,7 +127,9 @@
 								<div class="directions__inner">
 									<picture><source srcset="img/directions/air.webp" type="image/webp"><img src="img/directions/air.jpg" alt="Help to create dront to destroy occupants"></picture>
 									<div class="directions__text">
-										<h2 class="title directions__title">Аеророзробка</h2>
+										<h2 class="title directions__title">
+											Аеророзробка
+										</h2>
 										<p class="directions__description">
 											на розробку українських дронів та БПЛА
 										</p>
@@ -400,7 +425,7 @@
 		</div>
 	</div>
 </div> -->
-	<script src="js/app.min.js?_v=20220810212401"></script>
+	<script src="js/app.min.js?_v=20220810234715"></script>
 </body>
 
 </html>
