Fix lazy load and other bugs

--- a/home.html
+++ b/home.html
@@ -6,7 +6,7 @@
 	<meta charset="UTF-8">
 	<meta name="format-detection" content="telephone=no">
 	<!-- <style>body{opacity: 0;}</style> -->
-	<link rel="stylesheet" href="css/style.min.css?_v=20220810234715">
+	<link rel="stylesheet" href="css/style.min.css?_v=20220810235819">
 	<link rel="shortcut icon" href="favicon.ico">
 	<!-- <meta name="robots" content="noindex, nofollow"> -->
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -95,7 +95,7 @@
 				<div class="directions__container">
 					<div class="directions__items">
 						<div class="directions__item">
-							<a href="#">
+							<a href="militaryHelp.html">
 								<div class="directions__inner">
 									<picture><source srcset="img/directions/military.webp" type="image/webp"><img src="img/directions/military.jpg" alt="Military help"></picture>
 									<div class="directions__text">
@@ -108,7 +108,7 @@
 							</a>
 						</div>
 						<div class="directions__item">
-							<a href="#">
+							<a href="childrenHelp.html">
 								<div class="directions__inner">
 									<picture><source srcset="img/directions/children.webp" type="image/webp"><img src="img/directions/children.jpg" alt="Children help"></picture>
 									<div class="directions__text">
@@ -123,7 +123,7 @@
 							</a>
 						</div>
 						<div class="directions__item">
-							<a href="#">
+							<a href="airHelp.html">
 								<div class="directions__inner">
 									<picture><source srcset="img/directions/air.webp" type="image/webp"><img src="img/directions/air.jpg" alt="Help to create dront to destroy occupants"></picture>
 									<div class="directions__text">
@@ -425,7 +425,7 @@
 		</div>
 	</div>
 </div> -->
-	<script src="js/app.min.js?_v=20220810234715"></script>
+	<script src="js/app.min.js?_v=20220810235819"></script>
 </body>
 
 </html>
