--- a/home.html
+++ b/home.html
@@ -6,7 +6,7 @@
 	<meta charset="UTF-8">
 	<meta name="format-detection" content="telephone=no">
 	<!-- <style>body{opacity: 0;}</style> -->
-	<link rel="stylesheet" href="css/style.min.css?_v=20220810235819">
+	<link rel="stylesheet" href="css/style.min.css?_v=20220811100148">
 	<link rel="shortcut icon" href="favicon.ico">
 	<!-- <meta name="robots" content="noindex, nofollow"> -->
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -97,7 +97,7 @@
 						<div class="directions__item">
 							<a href="militaryHelp.html">
 								<div class="directions__inner">
-									<picture><source srcset="img/directions/military.webp" type="image/webp"><img src="img/directions/military.jpg" alt="Military help"></picture>
+									<picture><source srcset="img/help/1.webp" type="image/webp"><img src="img/help/1.jpg" alt="Military help"></picture>
 									<div class="directions__text">
 										<h2 class="title directions__title">
 											Допомога <br>
@@ -110,7 +110,7 @@
 						<div class="directions__item">
 							<a href="childrenHelp.html">
 								<div class="directions__inner">
-									<picture><source srcset="img/directions/children.webp" type="image/webp"><img src="img/directions/children.jpg" alt="Children help"></picture>
+									<picture><source srcset="img/help/2.webp" type="image/webp"><img src="img/help/2.jpg" alt="Children help"></picture>
 									<div class="directions__text">
 										<h2 class="title directions__title">
 											Допомога дітям
@@ -125,7 +125,7 @@
 						<div class="directions__item">
 							<a href="airHelp.html">
 								<div class="directions__inner">
-									<picture><source srcset="img/directions/air.webp" type="image/webp"><img src="img/directions/air.jpg" alt="Help to create dront to destroy occupants"></picture>
+									<picture><source srcset="img/help/3.webp" type="image/webp"><img src="img/help/3.jpg" alt="Help to create dront to destroy occupants"></picture>
 									<div class="directions__text">
 										<h2 class="title directions__title">
 											Аеророзробка
@@ -425,7 +425,7 @@
 		</div>
 	</div>
 </div> -->
-	<script src="js/app.min.js?_v=20220810235819"></script>
+	<script src="js/app.min.js?_v=20220811100148"></script>
 </body>
 
 </html>
